# attrdict

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
attrdict/: __init__.py  _base.py  _base_utils.py  test.py  utils.py
