[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "attr-dicts"
version = "1.0.1"
authors = [
  { name="Suneel Belkhale", email="belkhale@stanford.edu" },
]
description = "AttrDict for nested dictionary processing and utilities"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Stanford-ILIAD/attrdict"
"Bug Tracker" = "https://github.com/Stanford-ILIAD/attrdict/issues"
